# idn-torchjs

./: .gitignore  .npmignore  .prettierrc  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
examples/: example.js  example2.js
src/: index.cc  module.cc  module.h  tensor.cc  tensor.h
tests/: lenet.pt  runTorchJS.js  torchjs.js
